--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ APP_SECRET=e64a0232507f1400932a58b9c9389e58
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
-DATABASE_URL="mysql://root:root@127.0.0.1:3306/projet_utilisateurs?serverVersion=8.0.40&charset=utf8mb4"
+DATABASE_URL="mysql://admin:admin@127.0.0.1:3306/backMeuble?serverVersion=8.0.40&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
